Sun 27th Apr 2014       Library/permutations.ml

Added

  PERMUTES_BIJECTIONS =
   |- !p q. (!x. x IN s ==> p x IN s) /\ (!x. ~(x IN s) ==> p x = x) /\
            (!x. x IN s ==> q x IN s) /\ (!x. ~(x IN s) ==> q x = x) /\
            (!x. p(q x) = x) /\ (!x. q(p x) = x)
            ==> p permutes s

Sat 19th Apr 2014       sets.ml

Added another clause to FORALL_IN_GSPEC and EXISTS_IN_GSPEC for the case of 4
bound variables, so they have now become:

  FORALL_IN_GSPEC =
   |- (!P f. (!z. z IN {f x | P x} ==> Q z) <=> (!x. P x ==> Q(f x))) /\
      (!P f. (!z. z IN {f x y | P x y} ==> Q z) <=>
             (!x y. P x y ==> Q(f x y))) /\
      (!P f. (!z. z IN {f w x y | P w x y} ==> Q z) <=>
             (!w x y. P w x y ==> Q(f w x y))) /\
      (!P f. (!z. z IN {f v w x y | P v w x y} ==> Q z) <=>
             (!v w x y. P v w x y ==> Q(f v w x y)))

  EXISTS_IN_GSPEC =
   |- (!P f. (?z. z IN {f x | P x} /\ Q z) <=> (?x. P x /\ Q(f x))) /\
      (!P f. (?z. z IN {f x y | P x y} /\ Q z) <=>
             (?x y. P x y /\ Q(f x y))) /\
      (!P f. (?z. z IN {f w x y | P w x y} /\ Q z) <=>
             (?w x y. P w x y /\ Q(f w x y))) /\
      (!P f. (?z. z IN {f v w x y | P v w x y} /\ Q z) <=>
             (?v w x y. P v w x y /\ Q(f v w x y)))

Sat 19th Apr 2014       pair.ml

Added "unpair" theorems:

  FORALL_UNPAIR_THM =
    |- (!x y. P x y) <=> (!z. P (FST z) (SND z))

  EXISTS_UNPAIR_THM =
    |- (?x y. P x y) <=> (?z. P (FST z) (SND z))

Tue 15th Apr 2014       bool.ml

Did a little more rationalization of the Boolean rule, recoding MP so that it
produces precisely the union of the two assumption lists, as the documentation
claims.

Mon 14th Apr 2014       Examples/lucas_lehmer.ml, 100/sqrt.ml [new file]

Added a new file containing a formalization of the Lucas-Lehmer test for
primality of Mersenne numbers, and a derived rule for applying it in particular
cases. This is quite a bit faster than the usual PRIME_CONV (in this special